<resources>
    <string name="app_name">Truth or Drink</string>
    <string name="draw_pile">Draw Pile</string>
    <string name="change_player_one_score">Drinks: $playerOneScore</string>
    <string name="change_player_two_score">Drinks: $playerTwoScore</string>
    <string name="deck_description">One of Many Decks</string>
    <string name="first_player_turn_marker">FIRST PLAYER\'S TURN</string>
    <string name="second_player_turn_marker">SECOND PLAYER\'S TURN</string>
    <string name="end_game_button_text">End Game</string>
    <string name="drink_count">Drink: 0</string>
    <string name="active_card_desc">Active Card</string>
    <string name="drink_button_text">Drink</string>
    <string name="truth_button_text">Truth</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="RulesText">GAMEPLAY \n To begin, the dealer will draw a card. They will then choose two players to question each other. The dealer will choose which question is asked first, giving the card to the first player to ask questions. The opposing player may either answer or drink. \n \n If they choose to drink, then they cannot win the round. The next player will then ask the remaining question found on the card. If both players are willing to answer the question, then the dealer will choose which answer they liked best. The player who gives the best, or only, answer will win a Question Card. \n \n Gameplay will continue clockwise around the group. Players may use their Strategy cards to redirect questions that they do not want to answer without forfeiting the round. These may be played during any turn, even if it is not your own. Each player should make sure they have three Strategy Cards at the start of every round. \n \n END OF GAME \n The game comes to an end when a player has collected 5 Question Cards. This player is declared the winner.</string>
    <string name="blue_deck_description">Blue Deck</string>
    <string name="red_deck_description">Red Deck</string>
    <string name="yellow_deck_description">Yellow Deck</string>
    <string name="rules_name">Rules</string>
    <string name="play_name">Play</string>
</resources>