<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liquor_on_table_small"
    tools:context=".MainActivity">

    <!--the root view must be the DrawerLayout-->
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/my_drawer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--this the navigation view which draws
            and shows the navigation drawer-->
        <!--include the menu created in the menu folder-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <Button
        android:id="@+id/draw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#00FFFFFF"
        android:text="@string/draw_pile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:cardBackgroundColor="#BF646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/player_one_turn_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:background="#FFFFFFFF"
                android:text="@string/first_player_turn_marker"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/end_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginHorizontal="200dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_toStartOf="@+id/player_two_turn_marker"
                android:layout_toEndOf="@+id/player_one_turn_marker"
                android:gravity="center_horizontal"
                android:text="@string/end_game_button_text"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/player_two_turn_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFFFF"
                android:text="@string/second_player_turn_marker"
                android:textSize="12sp"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_one_score"
                style="@style/ScoreTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:rotation="90"
                android:text="@string/drink_count"
                android:textColor="#F3F3F3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/drink_button"
                style="@style/ButtonTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/tod_back_invert"
                android:text="@string/drink_button_text" />

            <ImageView
                android:id="@+id/active_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/active_card_desc"
                android:src="@drawable/on_the_rocks_1" />

            <Button
                android:id="@+id/truth_button"
                style="@style/ButtonTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/tod_back_invert"
                android:text="@string/truth_button_text" />

            <TextView
                android:id="@+id/player_two_score"
                style="@style/ScoreTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:rotation="270"
                android:text="@string/drink_count"
                android:textColor="#F3F3F3"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>